syntax = "proto3";

package com.todo.demo6.proto;

option java_package = "com.todo.netty.demo6.proto"; //可以跟上面 package 不一样
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

message MyRequest {
    string username = 1;
}
message MyResponse {
    string realname = 2;
}

message StudentRequest {
    int32 age = 1;
}
message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList {
    repeated StudentResponse studentResponse = 1;
}

message StreamRequest {
    string request_info = 1;
}
message StreamResponse {
    string response_info = 1;
}

service StudentService {

    rpc getRealNameByUserName (MyRequest) returns (MyResponse) {
    }
    //单向流式响应
    rpc getStudentsByAge (StudentRequest) returns (stream StudentResponse) {
    }
    //单向流式请求
    rpc getStudentsWrapperByAge (stream StudentRequest) returns (StudentResponseList) {
    }
    //双向流式对话
    rpc BiTalk (stream StreamRequest) returns (stream StreamResponse) {
    }

}



